# ntfs-efi

./: CMakeLists.txt  README.md
.github/workflows/: build-amd64.yml  build-x86.yml
src/: misc.c  misc.cpp  misc.h  ntfs.c  ntfs.cpp  ntfs.h  quibbleproto.h
src/ebiggers/: common_defs.h  decompress_common.c  decompress_common.h  lzx_common.c  lzx_common.h  lzx_decompress.c  system_compression.h  xpress_decompress.c
